app/assets/stylesheets/bootstrap_and_customisation.css.scss
@import url(http://fonts.googleapis.com/css?family=News+Cycle:400,700|Lobster|Comfortaa:400,700|Varela+Round);

$body-bg:					#f7f7f7;

$navbar-default-bg:			#fcfcfc;
$navbar-default-link-color:	#7f8c8d;
$navbar-default-link-hover-color:	#3498db;

$navbar-default-brand-color: #3498db;

$jumbotron-bg:				#2980b9;
$jumbotron-color:			white;

$btn-default-bg:			#3498db;
$btn-default-color:			white;
$btn-default-border:		#2980b9;
$btn-primary-bg:			white;
$btn-primary-color:			#2980b9;

$font-family-base:			'Comfortaa', cursive;

$gray-dark:					#525252;
$gray-light:				#858585;

@import "bootstrap-sprockets";
@import 'bootstrap';

.center {
	text-align: center;
}

#remember_me_checkbox {
	position: relative;
	left: 5px;
}

.navbar-brand {
	font-family: 'Lobster', cursive;
	font-size: 1.5em;
}

.nav {
	font-family: 'Comfortaa', cursive;
	font-size: 0.95em;
}

.jumbotron {
	#jumbotron-title {
		font-family: 'Lobster', cursive;
	}
	position: fixed;
	
	top: 10%;
	left: 10%;
	right: 10%;
	// height: 85%; was doing strange things on landscape mode on mobile
	bottom: 12.5%; //to ensure box fits into a mobile browser window - this value takes precedence over the jumbotron's bottom padding.

	padding-bottom: 4em;

	z-index: 1;
	opacity: 0.8;
}

.glyphicon-plus {
	color: #3498db;
	font-weight: bold;
	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
}

